# derbao

./: .env.example  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPCE.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
nakari/: __init__.py  cli.py
nakari/agent/: __init__.py  loop.py  prompt.py  tools.py
nakari/config/: __init__.py
nakari/memory/: __init__.py
nakari/search/: __init__.py  client.py  errors.py  providers.py  types.py
src/: cli.ts  demo.ts
src/agent/: loop.ts  prompt.ts  tools.ts
src/config/: index.ts
src/memory/: client.ts
src/search/: client.ts  errors.ts  index.ts  providers.ts  types.ts
